--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOC Visualizer & PDF Cropper</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script>
         tailwind.config = {
             theme: {
@@ -24,8 +25,25 @@
     <div class="container mx-auto px-4 py-8">
         <!-- Header -->
         <header class="text-center mb-8">
-            <h1 class="text-4xl font-bold text-gray-800 mb-2">TOC Visualizer & PDF Cropper</h1>
-            <p class="text-gray-600">Upload a PDF, visualize its table of contents, and crop sections</p>
+            <div class="flex justify-between items-center mb-4">
+                <div class="flex-1"></div>
+                <div class="flex-1">
+                    <h1 class="text-4xl font-bold text-gray-800 mb-2">TOC Visualizer & PDF Cropper</h1>
+                    <p class="text-gray-600">Upload a PDF, visualize its table of contents, and crop sections</p>
+                </div>
+                <div class="flex-1 flex justify-end space-x-2">
+                    <a href="upload-form.html"
+                        class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-lg transition-colors duration-200 flex items-center space-x-2">
+                        <i class="fas fa-upload"></i>
+                        <span>Upload File</span>
+                    </a>
+                    <a href="extractions-viewer.html"
+                        class="bg-purple-600 hover:bg-purple-700 text-white px-4 py-2 rounded-lg transition-colors duration-200 flex items-center space-x-2">
+                        <i class="fas fa-images"></i>
+                        <span>View Extractions</span>
+                    </a>
+                </div>
+            </div>
         </header>
 
         <!-- Upload Section -->
@@ -148,6 +166,20 @@
                             class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent">
                     </div>
                 </div>
+
+                <!-- Skip Extraction Option -->
+                <div class="mt-4">
+                    <label class="flex items-center space-x-2">
+                        <input type="checkbox" id="enableExtraction"
+                            class="h-4 w-4 text-primary focus:ring-primary border-gray-300 rounded">
+                        <span class="text-sm text-gray-700">Enable image extraction (crop + extract images)</span>
+                        <span class="text-xs text-gray-500 ml-2">
+                            <i class="fas fa-info-circle"></i>
+                            Check this to run docling image extraction after cropping the PDF
+                        </span>
+                    </label>
+                </div>
+
                 <div class="flex justify-between items-center mt-4">
                     <p class="text-sm text-gray-600" id="pageRange">Select page range</p>
                     <div class="space-x-2">
@@ -157,7 +189,7 @@
                         </button>
                         <button id="cropBtn"
                             class="bg-green-600 text-white px-4 py-2 rounded-md hover:bg-green-700 transition-colors duration-200">
-                            Crop & Download
+                            <span id="cropBtnText">Crop Only</span>
                         </button>
                     </div>
                 </div>
