--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <p class="text-gray-600">Upload a PDF, visualize its table of contents, and crop sections</p>
                 </div>
                 <div class="flex-1 flex justify-end space-x-2">
-                    <a href="upload-form.html"
+                    <a href="case-creator.html"
                         class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-lg transition-colors duration-200 flex items-center space-x-2">
                         <i class="fas fa-upload"></i>
                         <span>Upload File</span>
